@@ -2,6 +2,7 @@
 x.x:
 
 - fixed: no tab selected in group listing when group_tools is first activated
+- changed: performance improvement in group admin transfer
 
 2.6 (2013-05-06):
 
